kube/service_proxy_api.yml
apiVersion: v1
kind: Service
metadata:
  name: service-proxy-api
  namespace: meshed
spec:
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
