kube/service_weather_api.yml
apiVersion: v1
kind: Service
metadata:
  name: service-weather-api
  namespace: meshed
spec:
  selector:
    app: weather-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
