kube/destination_rule_weather_api.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vs-weather
spec:
  host: service-proxy-api.meshed.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
