kube/virtual_service_proxy_api.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-proxy
  namespace: meshed

spec:
  hosts:
    - service-proxy
  http:
    - route:
        - destination:
            host: service-proxy-api.meshed.svc.cluster.local
            port:
              number: 3002
